Removed and added some useful comments.

--- a/todo list/index.html
+++ b/todo list/index.html
@@ -15,28 +15,15 @@
     <div id="total">
         <div class="container">
             <div class="task">
-                <!--
-                <label class="containertask button1">
-                    <input type="checkbox"  title="Task completed.">
-                    <span class="checkmark" id="check" title="Task completed."></span>
-                </label>
-                -->
                 <div>
-
                 <input type="text" class="task-type" maxlength="85" name="FirstTask" placeholder="Write here your task...">
                 </div>
-                <!--
-                <div >
-                    <input type="button" class="button2  buttonani" title="Delete task" value="✕">
-                </div>
-                -->
             </div>
-
         </div>
     </div>
     <div class=container>
         <ul class="list-task">
-            
+            <!-- Here we will add the tasks.-->
         </ul>
     </div>
 
